--- a/CasualTL.html
+++ b/CasualTL.html
@@ -1,1 +1,220 @@
-cas
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Dating Sim — Scene</title>
+
+<style>
+body {
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+    background: url("Artboard 1.png") center / cover no-repeat;
+    position: relative;
+    overflow: hidden;
+    font-family: Arial, sans-serif;
+    cursor: pointer;
+}
+
+/* Fade overlay */
+.fade {
+    position: absolute;
+    inset: 0;
+    background: black;
+    opacity: 0;
+    transition: opacity 1s ease;
+    pointer-events: none;
+    z-index: 100;
+}
+.fade.active { opacity: 1; }
+
+/* Dialogue box */
+.dialogue-box {
+    position: absolute;
+    bottom: 3%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 70%;
+    max-width: 900px;
+    z-index: 10;
+}
+.dialogue-box img { width: 100%; }
+
+/* Dialogue text */
+.dialogue-text {
+    position: absolute;
+    bottom: 13%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60%;
+    max-width: 750px;
+    font-size: 1.65rem;
+    font-weight: bold;
+    color: black;
+    z-index: 11;
+    animation: pop .35s ease;
+}
+@keyframes pop {
+    from { opacity: 0; transform: translateX(-50%) scale(.96); }
+    to { opacity: 1; transform: translateX(-50%) scale(1); }
+}
+
+/* Sliding PNG */
+.slide-in {
+    position: absolute;
+    bottom: 0;
+    left: -40%;
+    width: 40%;
+    transition: left 1s ease, opacity .5s ease;
+    z-index: 5;
+}
+.slide-in.active { left: 0; }
+.slide-in.hide { opacity: 0; }
+
+/* OPTIONS */
+.options {
+    position: absolute;
+    top: 50%;
+    right: 6%;
+    transform: translateY(-50%);
+    display: none;
+    flex-direction: column;
+    gap: 20px;
+    z-index: 50;
+}
+.option-btn {
+    position: relative;
+    width: 260px;
+    cursor: pointer;
+    transition: transform .2s ease;
+}
+.option-btn:hover { transform: scale(1.05); }
+.option-btn img { width: 100%; }
+.option-label {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-shadow: 1px 1px 3px black;
+}
+</style>
+</head>
+
+<body>
+
+<div class="fade" id="fade"></div>
+
+<div class="options" id="optionsMenu">
+    <a href="MarkTalk.html" class="option-btn">
+        <img src="ButtonD.png">
+        <div class="option-label">Talk</div>
+    </a>
+
+    <!-- IGNORE BUTTON WITH FADE -->
+    <div class="option-btn" id="ignoreBtn">
+        <img src="ButtonD.png">
+        <div class="option-label">Library</div>
+    </div>
+</div>
+
+<div class="dialogue-box" id="dialogueBox">
+    <img src="DBox.png">
+</div>
+
+<div class="dialogue-text" id="dialogueText"></div>
+
+<script>
+const dialogue1 = [
+    "You: This look is kinda fitting.",
+    "It doesn't really stand out all that much though",
+    "*Looks at window*",
+    "Y'know today looks pretty nice",
+    "I think im gonna go for a walk"
+];
+
+const dialogue2 = [
+    "This park is actually really nice...",
+    "They have native flower beds and everything.",
+    "Oh wow theres a library too!",
+    "is that guy walking towards me?",
+    "should I stay and conversate?",
+    "or go to the library?",
+];
+
+let dialogue = dialogue1;
+let index = 0;
+let phase = "dialogue";
+
+const text = document.getElementById("dialogueText");
+const fade = document.getElementById("fade");
+const slide = document.getElementById("slideImage");
+const options = document.getElementById("optionsMenu");
+const box = document.getElementById("dialogueBox");
+const ignoreBtn = document.getElementById("ignoreBtn");
+
+/* Initialize */
+text.textContent = dialogue[index];
+
+document.body.addEventListener("click", advance);
+box.addEventListener("click", advance);
+
+/* IGNORE BUTTON → FADE → REDIRECT */
+ignoreBtn.addEventListener("click", (e) => {
+    e.stopPropagation();
+    fade.classList.add("active");
+
+    setTimeout(() => {
+        window.location.href = "CasualSpam.html";
+    }, 1000);
+});
+
+function advance(e) {
+    if (e.target.closest(".option-btn")) return;
+
+    if (phase === "dialogue") {
+        if (++index < dialogue.length) update();
+        else phase = "slide";
+    }
+
+    else if (phase === "slide") {
+        slide.classList.add("active");
+        phase = "fade";
+    }
+
+    else if (phase === "fade") {
+        fade.classList.add("active");
+        setTimeout(() => {
+            document.body.style.backgroundImage = 'url("Artboard 1 copy.png")';
+            slide.classList.add("hide");
+            dialogue = dialogue2;
+            index = 0;
+            text.textContent = dialogue[0];
+            fade.classList.remove("active");
+            phase = "newDialogue";
+        }, 1000);
+    }
+
+    else if (phase === "newDialogue") {
+        if (++index < dialogue.length) update();
+        else {
+            phase = "options";
+            options.style.display = "flex";
+        }
+    }
+}
+
+function update() {
+    text.textContent = dialogue[index];
+    text.style.animation = "none";
+    text.offsetHeight;
+    text.style.animation = "pop .35s ease";
+}
+</script>
+
+</body>
+</html>
