--- a/CasualLb.html
+++ b/CasualLb.html
@@ -10,7 +10,7 @@ body {
     margin: 0;
     height: 100vh;
     width: 100vw;
-    background: url("Artboard 1.png") center / cover no-repeat;
+    background: url("Artboard 2.png") center / cover no-repeat;
     position: relative;
     overflow: hidden;
     font-family: Arial, sans-serif;
@@ -168,7 +168,7 @@ function fadeToNext() {
     fade.classList.add("active");
 
     setTimeout(() => {
-        document.body.style.backgroundImage = 'url("Artboard 2.png")';
+        document.body.style.backgroundImage = 'url("Artboard 1 copy.png")';
         dialogue = dialogue2;
         index = 0;
         text.textContent = dialogue[0];
