--- a/CasualLb.html
+++ b/CasualLb.html
@@ -122,13 +122,14 @@ body {
 <script>
 /* DIALOGUE SETS */
 const dialogue1 = [
-    "The library smells like old paper and dust."
+    "The library it is..."
 ];
 
 const dialogue2 = [
-    "Rows and rows of books stretch endlessly.",
-    "Every aisle feels like a different world.",
-    "I should probably pick a section..."
+    "ahhhhh....peace and quiet.",
+    "Every time I enter the library it kinda trips me out...",
+    "There so much knowledge within these walls, its amazing...",
+    "Do I want to read something real or something out of this world?"
 ];
 
 let dialogue = dialogue1;
