--- a/CasualSp.html
+++ b/CasualSp.html
@@ -140,10 +140,15 @@ body {
 
 <script>
 const dialogue = [
-    "Xander: Hey— uh, sorry if this is weird.",
-    "Xander: I just saw you standing here and thought I'd say hi.",
-    "You: Oh— hey.",
-    "Xander: So... would you wanna hang out sometime?"
+    "You: A little conversation never hurt",
+    "???: Hello sir/Ma'am, are you busy at the moment?",
+    "(did he just say 'sir slash ma'am'?)",
+    "You: Not really...",
+    "???: Good, so you won't mind if I take up some of your time?",
+    "You: I guess not.",
+    "Xander: SWELL! Im Xander, Im with CorpoCorps' new marketing program!",
+    "You: CorpoCorps?",
+    "Xander: Yes! Have you heard of us?",
 ];
 
 let index = 0;
