--- a/CasualNf.html
+++ b/CasualNf.html
@@ -143,11 +143,10 @@ const dialogue1 = [
 
 /* SCENE 2 */
 const dialogue2 = [
-    "Xander: Oh— hey, didn’t expect to see you here.",
-    "You: Yeah, just browsing.",
-    "Xander: I’m kinda into history and weird biographies.",
-    "You: That actually sounds interesting.",
-    "Xander: Wanna sit and talk for a bit?"
+    "(shit its the guy I saw outside).",
+    "(AND HES WALKING TOWARS ME!)",
+    "???: Hello! do you also have an affinity for CorpoCorps marketing history?",
+    "You: ...",
 ];
 
 let dialogue = dialogue1;
