--- a/CasualNf.html
+++ b/CasualNf.html
@@ -144,7 +144,7 @@ const dialogue1 = [
 /* SCENE 2 */
 const dialogue2 = [
     "(shit its the guy I saw outside).",
-    "(AND HES WALKING TOWARS ME!)",
+    "(AND HES WALKING TOWARDS ME!)",
     "???: Hello! do you also have an affinity for CorpoCorps marketing history?",
     "You: ...",
 ];
