--- a/CasualNo.html
+++ b/CasualNo.html
@@ -120,7 +120,7 @@ body {
 
 <script>
 const dialogue = [
-    "You: No I havent.",
+    "You: No I haven't.",
     "Xander: well thats quite alright!",
     "Xander: Would you like to hear what we here at CorpoCorps are all about?"
 ];
