--- a/CasSH.html
+++ b/CasSH.html
@@ -64,7 +64,7 @@ body {
 
 <body>
 
-<div class="victory-text">VICTORY ACHIEVED</div>
+<div class="victory-text">LOVER ACQUIRED</div>
 
 <div class="victory-img">
     <img src="SpamH.png" alt="Victory Image">
