--- a/CasualYes.html
+++ b/CasualYes.html
@@ -77,9 +77,9 @@ body {
 <script>
 const dialogue = [
     "You: Yeah, sure.",
-    "Xander: Excellent choice.",
-    "Xander: Most people hesitate when presented with opportunity.",
-    "Xander: You, however, understand potential."
+    "Xander: Excellent choice, would you like to buy some units?.",
+    "You: Yes...",
+    "Xander: Great! ill set you down for 100 units and mail you the bill."
 ];
 
 let index = 0;
