--- a/CasualYes.html
+++ b/CasualYes.html
@@ -79,7 +79,7 @@ const dialogue = [
     "You: Yeah, sure.",
     "Xander: Excellent choice, would you like to buy some units?.",
     "You: Yes...",
-    "Xander: Great! ill set you down for 100 units and mail you the bill."
+    "Xander: Great! ill set you down for 100 units and mail you the bill.",
 ];
 
 let index = 0;
