--- a/CasualFi.html
+++ b/CasualFi.html
@@ -128,11 +128,11 @@ body {
 
 <script>
 const dialogue = [
-    "You: I guess fiction is kind of underrated.",
-    "You: Sometimes it's nice to escape reality for a bit.",
-    "???: You looking for something specific?",
+    "You: Well the fiction section is right here...",
+    "You: Oh wow they have Berse-",
+    "(AAA I TOUCHED SOMEONE'S HAND)",
+    "???: oh-oh im so sorry I-I didn't see you",
     "You: Oh— uh— I didn't see you there.",
-    "???: Heh. Most people don't."
 ];
 
 let index = 0;
