--- a/CasualNFyes.html
+++ b/CasualNFyes.html
@@ -88,9 +88,10 @@ body {
 
 <script>
 const dialogue = [
-    "You: Yeah, non-fiction is more my thing.",
-    "Xander: Ahh, a mind that seeks truth and structure.",
-    "Xander: That curiosity will take you places… interesting places."
+    "You: Yeah, 100% man",
+    "Xander: Ahh, so you could name what benefits CorpoCorps has to offer then, correct?.",
+    "You: yeah uh....theres dential....,
+    "Xander: A FRAUD YOU DON'T EVEN KNOW THE FOUNDATION OF CORPOCORPS!."
 ];
 
 let index = 0;
