--- a/CasualNFyes.html
+++ b/CasualNFyes.html
@@ -91,7 +91,7 @@ const dialogue = [
     "You: Yeah, 100% man",
     "Xander: Ahh, so you could name what benefits CorpoCorps has to offer then, correct?.",
     "You: yeah uh....theres dential....,
-    "Xander: A FRAUD YOU DON'T EVEN KNOW THE FOUNDATION OF CORPOCORPS!."
+    "Xander: A FRAUD YOU DON'T EVEN KNOW THE FOUNDATION OF CORPOCORPS!.",
 ];
 
 let index = 0;
