--- a/CasualNFyes.html
+++ b/CasualNFyes.html
@@ -90,7 +90,7 @@ body {
 const dialogue = [
     "You: Yeah, 100% man",
     "Xander: Ahh, so you could name what benefits CorpoCorps has to offer then, correct?.",
-    "You: yeah uh....theres dential....,
+    "You: yeah uh....theres dential....",
     "Xander: A FRAUD YOU DON'T EVEN KNOW THE FOUNDATION OF CORPOCORPS!.",
 ];
 
