--- a/CasualFlirt.html
+++ b/CasualFlirt.html
@@ -88,10 +88,10 @@ body {
 
 <script>
 const dialogue = [
-    "You: You come here often?",
-    "???: That's the best you've got?",
-    "You: Hey— it worked, didn't it?",
-    "???: Not really. I'm leaving."
+    "You: You know, your hands are really soft",
+    "???: GET AWAY WEIRDO!!",
+    "You: Hey— wait I-",
+    "???: SECURITYYYY!!"
 ];
 
 let index = 0;
