--- a/CasualSorry.html
+++ b/CasualSorry.html
@@ -127,16 +127,16 @@ body {
 
 <script>
 const dialogue = [
-    "You: I'm really sorry about before.",
-    "???: Sorry doesn't usually fix things.",
-    "You: I wasn't trying to be rude.",
-    "???: You were careless.",
-    "You: I know. I should've thought more.",
-    "???: You should have.",
-    "You: I didn't mean to upset you.",
-    "???: Intent doesn't erase impact.",
-    "You: I just wanted to make it right.",
-    "???: Then learn from this."
+    "You: I'm really sorry about that.",
+    "???: Its ok, Im sorry.",
+    "You: why? ",
+    "???: I should have noticed you and looked before hand.",
+    "You: No im sorry that I was being careless.",
+    "???: But dont blame yourself, im sorry for grabbing your book, you clearly have the right of way.",
+    "You: I see where you're coming from but its my fault, really, im the one whos sorry.",
+    "???: No no no, I assure you im the one who should apologize.",
+    "You: Please let  me make things right, I ask you accept my apology...",
+    "???: But it is I who should be so-"
 ];
 
 let index = 0;
