--- a/CasualSorry.html
+++ b/CasualSorry.html
@@ -17,7 +17,7 @@ body {
     cursor: pointer;
 }
 
-/* SCENE WRAPPER (USED FOR EXPLOSION) */
+/* SCENE WRAPPER */
 .scene {
     position: absolute;
     inset: 0;
@@ -37,7 +37,7 @@ body {
     100% { transform: scale(1.2); filter: brightness(3); }
 }
 
-/* WHITE FLASH */
+/* FLASH */
 .flash {
     position: absolute;
     inset: 0;
@@ -45,16 +45,14 @@ body {
     opacity: 0;
     z-index: 90;
 }
-.flash.active {
-    animation: flash .3s ease;
-}
+.flash.active { animation: flash .3s ease; }
 @keyframes flash {
     0% { opacity: 0; }
     50% { opacity: 1; }
     100% { opacity: 0; }
 }
 
-/* FADE TO BLACK */
+/* FADE */
 .fade {
     position: absolute;
     inset: 0;
@@ -66,7 +64,7 @@ body {
 }
 .fade.active { opacity: 1; }
 
-/* LEFT CHARACTER */
+/* CHARACTER */
 .character {
     position: absolute;
     bottom: 0;
@@ -87,7 +85,7 @@ body {
 }
 .dialogue-box img { width: 100%; }
 
-/* DIALOGUE TEXT */
+/* TEXT */
 .dialogue-text {
     position: absolute;
     bottom: 13%;
@@ -97,7 +95,6 @@ body {
     max-width: 750px;
     font-size: 1.6rem;
     font-weight: bold;
-    line-height: 1.35;
     color: black;
     z-index: 11;
     animation: pop .35s ease;
@@ -107,23 +104,45 @@ body {
     from { opacity: 0; transform: translateX(-50%) scale(.96); }
     to   { opacity: 1; transform: translateX(-50%) scale(1); }
 }
+
+/* STOP BUTTON */
+.stop-btn {
+    position: absolute;
+    right: 5%;
+    top: 50%;
+    transform: translateY(-50%);
+    background: red;
+    color: white;
+    font-size: 1.4rem;
+    font-weight: bold;
+    padding: 14px 32px;
+    border: none;
+    cursor: pointer;
+    z-index: 50;
+    display: none;
+    box-shadow: 0 0 10px black;
+}
+.stop-btn:hover {
+    background: darkred;
+}
 </style>
 </head>
 
 <body>
 
-<!-- EXPLOSION SOUND -->
 <audio id="explosionSound" src="Explosion.mp3" preload="auto"></audio>
 
 <div class="scene" id="scene">
-    <img src="ModH.png" class="character" alt="Character">
+    <img src="ModH.png" class="character">
 
     <div class="dialogue-box">
-        <img src="DBox.png" alt="Dialogue Box">
+        <img src="DBox.png">
     </div>
 
     <div class="dialogue-text" id="dialogueText"></div>
 </div>
+
+<button class="stop-btn" id="stopBtn">STOP</button>
 
 <div class="flash" id="flash"></div>
 <div class="fade" id="fade"></div>
@@ -143,11 +162,13 @@ const dialogue = [
 ];
 
 let index = 0;
+const midpoint = Math.floor(dialogue.length / 2);
 
 const text = document.getElementById("dialogueText");
 const scene = document.getElementById("scene");
 const flash = document.getElementById("flash");
 const fade = document.getElementById("fade");
+const stopBtn = document.getElementById("stopBtn");
 const explosionSound = document.getElementById("explosionSound");
 
 /* INIT */
@@ -155,9 +176,20 @@ text.textContent = dialogue[index];
 
 document.body.addEventListener("click", advance);
 
-function advance() {
+stopBtn.addEventListener("click", (e) => {
+    e.stopPropagation();
+    window.location.href = "CasualSorryBreak.html";
+});
+
+function advance(e) {
+    if (e.target === stopBtn) return;
+
     if (++index < dialogue.length) {
         updateText();
+
+        if (index === midpoint) {
+            stopBtn.style.display = "block";
+        }
     } else {
         explodeScene();
     }
@@ -171,20 +203,15 @@ function updateText() {
 }
 
 function explodeScene() {
+    stopBtn.style.display = "none";
     scene.classList.add("explode");
     flash.classList.add("active");
 
-    /* PLAY EXPLOSION SOUND */
     explosionSound.currentTime = 0;
     explosionSound.play();
 
-    setTimeout(() => {
-        fade.classList.add("active");
-    }, 500);
-
-    setTimeout(() => {
-        window.location.href = "CasualLBfail.html";
-    }, 1500);
+    setTimeout(() => fade.classList.add("active"), 500);
+    setTimeout(() => window.location.href = "CasualLBfail.html", 1500);
 }
 </script>
 
